<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/icon"
        android:src="@drawable/img3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoText"
        style="@style/Base.V21.Theme.AppCompat"
        android:id="@+id/name"
        android:textColor="@color/logo_color"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoVocab"
        android:id="@+id/vocab"
        android:textSize="18sp"
        android:background="#ff6c303c"
        android:textAllCaps="false"
        android:onClick="gotoVocab"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/icon"
        android:layout_alignStart="@+id/icon"
        android:layout_marginTop="29dp"
        android:layout_alignRight="@+id/icon"
        android:layout_alignEnd="@+id/icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchFriend"
        android:id="@+id/friends"
        android:textSize="18sp"
        android:background="#ffb39a6d"
        android:layout_marginTop="31dp"
        android:textAllCaps="false"
        android:onClick="goMatchWithFriend"
        android:layout_below="@+id/userquiz"
        android:layout_alignLeft="@+id/vocab"
        android:layout_alignStart="@+id/vocab"
        android:layout_alignRight="@+id/icon"
        android:layout_alignEnd="@+id/icon" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchLadder"
        android:id="@+id/ladder"
        android:textSize="18sp"
        android:background="#ff809e6d"
        android:layout_below="@+id/friends"
        android:layout_alignStart="@+id/friends"
        android:layout_marginTop="43dp"
        android:textAllCaps="false"
        android:layout_alignEnd="@+id/friends"
        android:layout_alignLeft="@+id/friends"
        android:layout_alignRight="@+id/friends" />

    <ImageButton
        android:background="@drawable/profile_icon_black"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoProfile" />

    <ImageButton
        android:background="@drawable/facebooklogin"
        android:layout_width="65dip"
        android:layout_height="25dip"
        android:id="@+id/login_button"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoFacebookFriends" />

    <ImageButton
        android:background="@drawable/online_dic"
        android:layout_width="100dip"
        android:layout_height="30dip"
        android:id="@+id/onlineDictionaryButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:onClick="gotoOnlineDictionary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoUserQuiz"
        android:id="@+id/userquiz"
        android:textSize="18sp"
        android:background="#ff6c303c"
        android:textAllCaps="false"
        android:layout_below="@+id/vocab"
        android:layout_marginTop="29dp"
        android:layout_alignRight="@+id/vocab"
        android:layout_alignEnd="@+id/vocab"
        android:layout_alignLeft="@+id/vocab"
        android:layout_alignStart="@+id/vocab"
        android:onClick="gotouserquizlist"/>

</RelativeLayout>