<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeMeInn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="parse_app_id">l5qhJIZRq3vPDrHTmyzPu3z6IwMjukw7M3h9A8CZ</string>
    <string name="parse_client_key">iLgCs4Z7I71j1L9DIWrjwjkCZ02yc6KuDsYVO60e</string>
    <string name="facebook_app_id">1568762143375890</string>
    <string name="logoText">ME ME INN</string>

    <!-- Main Page Strings -->
    <string name="gotoVocab">Go To Vocabulary</string>
    <string name="gotoUserQuiz">Go To User-created quiz</string>
    <string name="matchFriend">Match with Friends</string>
    <string name="matchLadder">Match in Ladder</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtnText">Log In</string>
    <string name="gotoSignUpBtnText">Sign Up for ME ME INN</string>

    <!-- Chapter List Page Strings -->
    <string name="chapter1Text">High Frequency</string>
    <string name="chapter2Text">Medium Frequency</string>
    <string name="chapter3Text">Low Frequency</string>
    <!--
    <string name="chapter4Text">D</string>
    <string name="chapter5Text">E</string>
    <string name="chapter6Text">F</string>
    <string name="chapter7Text">G</string>
    <string name="chapter8Text">P</string>
    <string name="chapter9Text">N</string>
    <string name="chapter10Text">T</string>
    <string name="chapter11Text">S</string>
    -->

    <!-- Memorization Page Strings -->
    <string name="wordContent">Word Content</string>
    <string name="wordMeaning">Word Meaning</string>
    <string name="prevBtnText">Previous</string>
    <string name="nextBtnText">Next</string>
    <string name="sessionMarker">Try to remember it!(Review this word!)</string>

    <!-- SignUp Page Strings -->
    <string name="usernameSignUpHint">Enter your username</string>
    <string name="passSignUpHint">Enter your password</string>
    <string name="pass2SignUpHint">Confirm your password</string>
    <string name="cancelBtnText">Cancel</string>
    <string name="signUpBtnText">Sign Up</string>

    <!-- Vocab Page Strings -->
    <string name="vocabText">Vocabulary List</string>
    <string name="greText">GRE</string>
    <string name="ieltsText">IELTS</string>
    <string name="gmatText">GMAT</string>
    <string name="satText">SAT</string>
    <string name="actText">ACT</string>
    <string name="toeflText">TOEFL</string>
    <string name="vocabType">type</string>
    <string name="title_activity_memorization">MemorizationActivity</string>

    <string name="toQuiz">go to Quiz!</string>
    <string name="toMemo">Review</string>


    <!--Quiz Page Strings-->
    <string name="quizName">quiz!</string>
    <string name="readyq">ready to start?</string>
    <string name="questionQuiz">Choose the right meaning for: </string>
    <string name="testWord"> sample </string>
    <string name="meaning0">  sample meaning 0</string>
    <string name="meaning1">  sample meaning 1 </string>
    <string name="meaning2">  sample meaning 2 </string>
    <string name="meaning3">  sample meaning 3 </string>
    <string name="toPreviousTestWord"> Last Word! </string>
    <string name="toNextTestWord"> Next Word! </string>

    <!--Quiz Result Page Strings-->
    <string name="resultSentence"> Congratulations on finishing the quiz! </string>
    <string name="score"> Your quiz score </string>

    <!--Universal Strings-->
    <string name="goBack"> Back to main menu </string>
    <!--review chart Strings-->

    <string name="reviewProgress"> You have mastered 0/100 </string>
    <string name="remember"> Know! ^_^ </string>
    <string name="notRemember"> IDK...TT </string>
    <string name="checkMeaning"> check out the meaning!</string>
    <string name="finishReview"> finish</string>


    <!--Review Page Strings-->
    <string name="wordColHeader">Word</string>
    <string name="definitionColHeader">Definition</string>
    <string name="placeHolderTab">    </string>

    <!--Profile Page Strings-->
    <string name="reviewBtnText">Review Vocabulary</string>
    <string name="rankBtnText">Ranking</string>
    <string name="friendBtnText">Friends</string>
    <string name="usernameText">Username</string>
    <string name="title_activity_review_finished_pop_up">ReviewFinishedPopUp</string>
    <string name="checkpost">Check Post</string>
    <string name="addpost">Add Post</string>
    <string name="logoutText">Log out</string>

    <!--Contest Page Strings-->
    <string name="contestType">GRE Contest!</string>
    <string name="user">userName</string>
    <string name="opponent">oppoName</string>
    <string name="userScore">0</string>
    <string name="oppoScore">0</string>
    <string name="timeLeft">time</string>

    <!--find available friend Page Strings-->
    <string name="friendMatch">Click here to check out online friends!</string>


    <!--Friend Page Strings-->
    <string name="friendsText">My Friends</string>
    <string name="addfriendsText">Add Friends</string>

    <!--Post Question Page Strings-->
    <string name="submitpost">Submit</string>
    <string name="QuestionTitleHint">Input Question Title</string>
    <string name="QuestionOption1Hint">Input Option 1</string>
    <string name="QuestionOption2Hint">Input Option 2</string>
    <string name="QuestionOption3Hint">Input Option 3</string>
    <string name="QuestionOption4Hint">Input Option 4</string>

    <!--Check Question Page Strings-->
    <string name="QuestionTitle">Question title</string>
    <string name="QuestionType">Vocab Type</string>
    <string name="QuestionOption1">Option 1</string>
    <string name="QuestionOption2">Option 2</string>
    <string name="QuestionOption3">Option 3</string>
    <string name="QuestionOption4">Option 4</string>
    <string name="acceptpost">Accept</string>
    <string name="declinepost">Decline</string>

    <!--Check Post Vocab List Page Strings-->
    <string name="checkpostlist">Check Post List</string>

    <!--Add Post Vocab List Page Strings-->
    <string name="addpostlist">Add Post List</string>

    <!--Selection contest page Strings-->
    <string name="chooseType">select challenge!</string>

    <!--User-created quiz list Strings-->
    <string name="userquizlist">User-created Quiz List</string>

    <!--Match Result Strings-->
    <string name="matchResult">Match Result</string>
    <string name="matchScore">Match Score</string>


</resources>
