<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <!--android:id="@+id/">-->


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/icon"
        android:src="@drawable/img3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:id="@+id/uname"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textColorHint="@color/primary_dark_material_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:typeface="serif"
        android:textColorHint="@color/primary_dark_material_light"
        android:id="@+id/pword"
        android:layout_above="@+id/login"
        android:layout_alignStart="@+id/uname"
        android:layout_alignLeft="@+id/uname"
        android:layout_marginBottom="41dp"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/spinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/loginBtnText"
        android:id="@+id/login"
        android:layout_marginBottom="86dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/icon"
        android:layout_alignEnd="@+id/icon"
        android:layout_alignLeft="@+id/icon"
        android:layout_alignRight="@+id/icon"
        android:textSize="25sp"
        android:onClick="logIn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logoText"
        style="@style/Base.V21.Theme.AppCompat"
        android:id="@+id/name"
        android:textColor="@color/logo_color"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:text="@string/gotoSignUpBtnText"
        android:id="@+id/signup"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/login"
        android:layout_alignLeft="@+id/login"
        android:layout_alignRight="@+id/login"
        android:textColor="@color/white"
        android:background="?android:attr/selectableItemBackground"

        android:layout_alignStart="@+id/login"
        android:onClick="gotoSignUp" />

</RelativeLayout>
