...
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/name"
        android:background="@color/white" />

    <TextView
        android:id="@+id/addfriend"
        style="@style/Base.V21.Theme.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
...
        android:onClick="onAddFriend"
        android:text="@string/addfriendsText"
        android:textColor="#FF3F59"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/lst_users"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/addfriend"
        android:layout_below="@id/empty_view"
        android:divider="@color/white"
        android:dividerHeight="2dp" >
...
