<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/icon"
        android:src="@drawable/img3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wordContent"
        style="@style/Base.V21.Theme.AppCompat"
        android:id="@+id/wordContentView"
        android:textColor="#FFFF00"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true" />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevBtnText"
        android:id="@+id/prevWordBtn"
        android:textSize="18sp"
        android:background="#ffb39a6d"
        android:textAllCaps="false"
        android:onClick="onClickPrev"
        android:layout_alignTop="@+id/nextWordBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextBtnText"
        android:id="@+id/nextWordBtn"
        android:textSize="18sp"
        android:background="#ff809e6d"
        android:textAllCaps="false"
        android:layout_marginBottom="46dp"
        android:onClick="onClickNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toQuiz"
        android:id="@+id/quizButton"
        android:textSize="18sp"
        android:background="@color/DarkGoldenrod"
        android:textAllCaps="false"
        android:layout_marginBottom="46dp"
        android:onClick="startQuiz"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"/>

    <ImageButton

        android:id="@+id/imageButton"
        android:src="@drawable/speaker"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:onClick="speakText"
        android:layout_below="@+id/wordContentView"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/Base.V21.Theme.AppCompat"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/wordMeaning"
        android:id="@+id/wordMeaningView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_below="@+id/imageButton"
        android:layout_alignLeft="@+id/prevWordBtn"
        android:layout_alignStart="@+id/prevWordBtn" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hidden_edit_view"
        android:layout_above="@+id/prevWordBtn"
        android:layout_toRightOf="@+id/prevWordBtn"
        android:layout_toEndOf="@+id/prevWordBtn" />


</RelativeLayout>