...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/chapter1Text"
            android:textSize="18sp"
            android:background="@color/chapterBtn_background_color"
...
            android:onClick="onClick"/>

    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chapter3Text"
        android:textSize="18sp"
        android:background="@color/chapterBtn_background_color"
        android:textAllCaps="false"
        android:onClick="onClick"
        android:layout_marginBottom="62dp"
        android:layout_alignBottom="@+id/scrollView"
        android:layout_alignLeft="@+id/buttonB"
        android:layout_alignStart="@+id/buttonB"
        android:layout_alignRight="@+id/buttonB"
        android:layout_alignEnd="@+id/buttonB" />

    <Button
        android:id="@+id/buttonB"
...
